--- a/index.css
+++ b/index.css
@@ -10,16 +10,13 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  margin: auto;
   overflow-x: hidden;
   background: linear-gradient(180deg, #b068e9 0%, #6463e7 100%);
 }
 .card {
   font-family: "Kumbh Sans", sans-serif;
-  margin-top: 148px;
-  margin-bottom: 85px;
-  margin-left: 15px;
-  margin-right: 30px;
-  border-radius: 0px;
   background: #ffffff;
   box-shadow: 0px 50px 50px -20px rgba(53, 18, 122, 0.497159);
   border-radius: 23px;
@@ -27,31 +24,34 @@ body {
   flex-direction: column;
   justify-content: center;
   margin: auto;
+  height: 535px;
+  width: 327px;
+  left: 24px;
+  margin-top: 200px;
+  margin-bottom: 85px;
 }
 
-.smallshedowsvg {
-  margin-left: 200px;
-}
 .boxforanimations {
-  margin-bottom: 10px;
-}
-svg {
-  height: 643px;
-  width: 327px;
+  margin-top: -90px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  height: 180px;
+  width: 237px;
   border-radius: 0px;
-  margin-left: 65px;
-  margin-top: -345px;
 }
+
 .boxfortexts {
-  margin-top: -120px;
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 15px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 .textbox {
+  margin-top: -10px;
   height: 70px;
   width: 279px;
   left: 0px;
@@ -64,11 +64,6 @@ svg {
   font-size: 13px;
   line-height: 16px;
   color: #4b4c5f;
-}
-.textbox svg {
-  margin: auto;
-  padding-left: 240px;
-  padding-top: -100px;
 }
 
 .showtext {
@@ -108,13 +103,19 @@ svg {
     width: 920px;
   }
 
-  svg {
-    margin-left: -250px;
-    margin-top: 60px;
+  .boxforanimations {
+    margin-top: -90px;
+    display: flex;
+    justify-content: center;
+    align-self: center;
     height: 359px;
     width: 472px;
+    left: -84px;
+    top: 70px;
     border-radius: 0px;
+    margin-left: -200px;
   }
+
   .boxfortexts {
     margin-top: 65px;
     margin-left: 100px;
